Fix word-wrapping bug Relates to issue #37

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,6 +210,7 @@ button{
 .container-style > div{
   padding-top: 16px;
   padding-bottom: 8px;
+  word-wrap: break-word;
 }
 
 .container-style > div > p {
